Fix slide spacing and positioning in the about space

--- a/src/scss/swiper-theme.scss
+++ b/src/scss/swiper-theme.scss
@@ -4,13 +4,13 @@
 
 .swiper-pagination-bullet::before {
     content: '';
-    width: 0.7em;
-    height: 0.7em;
+    width: 0.8em;
+    height: 0.8em;
     border-radius: 50%;
     display: block;
     background-color: $grey-dark;
-    margin-left: 0.4em;
-    margin-top: 0.4em;
+    margin-left: 0.6em;
+    margin-top: 0.6em;
 }
 
 .swiper-pagination-bullet-active::before {
@@ -22,28 +22,25 @@
 }
 
 .swiper-wrapper {
-    padding-bottom: 4em;
+    padding-bottom: 3rem;
 }
 
 .swiper-slide {
-    padding: 0 1.7em;
+    padding: 0 3vw;
     box-sizing: border-box;
 }
 
 .swiper-pagination-bullet {
-    width: 1.5em;
-    height: 1.5em;
-    margin: 1em;
-    margin-left: 0.4em;
-    margin-top: 0.4em;
+    width: 2em;
+    height: 2em;
 }
 
 .swiper-button-next, .swiper-button-prev {
     color: $main-color;
-    height: 8em;
     top: 0;
     padding: 0.2em;
     background: white;
+    margin-top: 0;
 }
 
 .swiper-button-next {
@@ -54,6 +51,19 @@
     left: 0;
 }
 
-    
+.swiper-button-next, .swiper-button-prev, .swiper-wrapper, .swiper-slide {
+    height: 5rem;
+}
+
+.swiper-slide>div, .swiper-slide>div>a {
+    height: 100%;
+}
+
+.swiper-slide>div>a {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
     
     
